# TopoGym

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_environment.md
.github/workflows/: ci.yml  release.yml
docs/: contributing_environments.md  reference.md
docs/envs/: README.md
examples/: 01_quickstart.py  02_benchmark_sweep.py  03_visited_betti.py  04_directed_envs.py  05_bridges.py
scripts/: generate_assets.py  new_env.py
tests/: test_basemap.py  test_benchmarks.py  test_complexes.py  test_envs.py  test_generator.py  test_homology.py  test_spec.py  test_tda.py
topogym/: __init__.py  spec.py
topogym/benchmarks/: __init__.py
topogym/complexes/: __init__.py  cell_complex.py  gudhi_backend.py  product.py
topogym/core/: __init__.py  basemap.py  constants.py  homology.py  metadata.py
topogym/envs/: __init__.py  core.py  topo2d.py  topo3d.py
topogym/generation/: __init__.py  config.py  controls.py  generator.py  graph.py  shapes.py
topogym/rendering/: __init__.py  rgb.py  svg.py
topogym/tda/: __init__.py  pointcloud.py  tracker.py
